[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-cloud-task-scheduling"
version = "0.1.0"
description = "Baselines and QAOA experiments for a toy cloud task scheduling problem."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "qiskit>=0.46",
    "qiskit-aer>=0.13",
    "qiskit-algorithms>=0.3",
    "PyYAML>=6.0",
    "pulp>=2.7",
    "tabulate>=0.9",
    "scipy>=1.9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
